# devsync

./: Cargo.toml  README.md  devsync.1  devsync.1.md
distros/: README.md
distros/arch/: PKGBUILD  README.md
src/: main.rs
src/dir/: cargo.rs  cmake.rs  flutter.rs  git.rs  meson.rs  mod.rs  ninja.rs  simple.rs  svn.rs  sysroot.rs  yocto.rs
src/scanner/: mod.rs  scan.rs  stats.rs
src/ui/: mod.rs
src/utils/: mod.rs
