# Copyright (C) 2022 Jochen Henneberg <jh@henneberg-systemdesign.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[profile.release]
strip = 'symbols'

[package]
name = "devsync"
version = "0.1.0"
edition = "2021"

[dependencies]
getopts = "0.2.21"
crossbeam = "0.8.2"
bitflags = "1.3.2"
log = "0.4.17"
simple_logger = "2.2.0"
cfg-match = "0.2.1"
libc = "0.2.126"
users = "0.11.0"

tui = "0.18.0"
crossterm = "0.24.0"

git2 = "0.15.0"
