# Copyright (C) 2022 Jochen Henneberg <jh@henneberg-systemdesign.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[profile.release]
strip = 'symbols'

[package]
name = "devsync"
version = "0.3.0"
authors = ["Jochen Henneberg <jh@henneberg-systemdesign.com>"]
description = "Backup tool for software developers - an object driven approach"
readme = "README.md"
homepage = "https://github.com/Henneberg-Systemdesign/devsync"
repository = "https://github.com/Henneberg-Systemdesign/devsync"
license-file = "LICENSE"
keywords = ["backup", "developer"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
getopts = "0.2.21"
crossbeam = "0.8.2"
bitflags = "1.3.2"
log = "0.4.17"
simple_logger = "4.0.0"
cfg-match = "0.2.1"
libc = "0.2.132"
users = "0.11.0"
xml-rs = "0.8.4"

tui = "0.19.0"
crossterm = "0.25.0"

git2 = "0.15.0"
