# Copyright (C) 2022 Jochen Henneberg <jh@henneberg-systemdesign.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[profile.release]
strip = 'symbols'

[package]
name = "devsync"
version = "0.3.1"
authors = ["Jochen Henneberg <jh@henneberg-systemdesign.com>"]
description = "Backup tool for software developers - an object driven approach"
readme = "README.md"
homepage = "https://github.com/Henneberg-Systemdesign/devsync"
repository = "https://github.com/Henneberg-Systemdesign/devsync"
license-file = "LICENSE"
keywords = ["backup", "developer"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
getopts = "0.2.21"
crossbeam = "0.8.2"
bitflags = "2.3.1"
log = "0.4.18"
simple_logger = "4.1.0"
cfg-match = "0.2.1"
libc = "0.2.146"
users = "0.11.0"
xml-rs = "0.8.14"

tui = "0.19.0"
crossterm = "0.26.1"

git2 = "0.17.2"
